PUT watchlist, refactor tests
